--- a/404.html
+++ b/404.html
@@ -31,7 +31,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -40,7 +40,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
