--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         </button></span>
         <nav class="navigation">
           <ul>
-            <li><a class="navigation-link" href="/new2016/work">Work</a></li>
+            <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -44,7 +44,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -54,13 +54,13 @@
 
       <div id="sub-header">
 
-		<div class="type-wrap">
-        	<div class="container">
-            	<p><span id="typed"></span></p>
+		    <div class="type-wrap">
+              <div class="container">
+                <p><span id="typed"></span></p>
             </div>
         </div>
 
-        </div>
+      </div>
 
     <!-- PROJECTS -->
       <section id="portfolio-short">
@@ -130,10 +130,10 @@
     <script src="javascripts/jquery.easing.1.3.min.js"></script>
     <script src="javascripts/site.min.js" type="text/javascript"></script>
     <script>
-    $(function(){
 
+    $(function(){
         $("#typed").typed({
-            strings: ["Hello, my name is Bianca Negron.", "I am a Designer &amp; Front-End <br/> Developer based in New York City.", "Creating meaningful <br/> digital experiences."],
+            strings: ["Bianca Negron is a Designer <em>&</em> <br/> Developer living in New York City.", "Creating <em>&</em> building meaningful <br/> brands and digital experiences."],
             typeSpeed: 30,
             backDelay: 1200,
             loop: false,
@@ -150,7 +150,10 @@
 
     });
 
-    function newTyped(){ /* A new typed object */ }
+    function newTyped(){ /* A new typed object */
+
+
+    }
 
     function foo(){ console.log("Callback"); }
 
