--- a/work/index.html
+++ b/work/index.html
@@ -14,9 +14,9 @@
     <meta content='114' property='og:image:width'>
     <meta content='114' property='og:image:height'>
     <meta content='design, bianca negron' name='keywords'>
-      <link rel='shortcut icon' href='/new2016/favicon.ico'>
-      <script src="/new2016/javascripts/lib/modernizr.js" type="text/javascript"></script>
-      <link href="/new2016/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css">
+      <link rel='shortcut icon' href='../favicon.ico'>
+      <script src="../javascripts/lib/modernizr.js" type="text/javascript"></script>
+      <link href="../stylesheets/style.css" media="screen" rel="stylesheet" type="text/css">
       <script src="https://use.typekit.net/akc3smf.js"></script>
       <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
@@ -35,7 +35,7 @@
           <ul>
             <li><a class="navigation-link selected" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -44,7 +44,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf">Résumé</a></li>
+            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -75,7 +75,7 @@
                     <a href="http://phantogram.com" target="_blank" class="project-link" data-hover="Phantogram"><h4>Phantogram</h4></a>
                     <p>UX/UI Design</p>
               </div>
-             <a href="http://phantogram.com" target="_blank"><img src="/new2016/images/phantogram-half.jpg" class="img-responsive" alt="Design by Bianca Negron"/></a>
+             <a href="http://phantogram.com" target="_blank"><img src="../images/phantogram-half.jpg" class="img-responsive" alt="Design by Bianca Negron"/></a>
         </div><!-- project1 -->
 
         <div class="project-half mix cat-3" data-my-order="2">
@@ -83,7 +83,7 @@
                     <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
                     <p>iOS App Design</p>
               </div>    
-               <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="/new2016/images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
+               <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="../images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
         </div><!-- project2 -->
 
         <div class="project-half mix cat-1" data-my-order="3">
@@ -91,7 +91,7 @@
                     <a href="http://islandrecords.com/" target="_blank" class="project-link" data-hover="Island Records"><h4>Island Records</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://islandrecords.com/" target="_blank"><img src="/new2016/images/islandrecords-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://islandrecords.com/" target="_blank"><img src="../images/islandrecords-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
         </div><!-- project3 -->
 
         <div class="project-half mix cat-1" data-my-order="4">
@@ -99,7 +99,7 @@
                     <a href="http://casablanca-music.com/" target="_blank" class="project-link" data-hover="Casablanca Records"><h4>Casablanca Records</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://casablanca-music.com/" target="_blank"><img src="/new2016/images/casablanca-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://casablanca-music.com/" target="_blank"><img src="../images/casablanca-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
         </div><!-- project4 -->
 
         <div class="project-half mix cat-1" data-my-order="5">
@@ -107,7 +107,7 @@
                     <a href="http://www.postmalone.com/" target="_blank" class="project-link" data-hover="Post Malone"><h4>Post Malone</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://www.postmalone.com/" target="_blank"><img src="/new2016/images/postmalone-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.postmalone.com/" target="_blank"><img src="../images/postmalone-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
         </div><!-- project5 -->
 
         <div class="project-half mix cat-1" data-my-order="6">
@@ -115,7 +115,7 @@
                     <a href="http://www.amoslee.com/" target="_blank" class="project-link" data-hover="Amos Lee"><h4>Amos Lee</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://www.amoslee.com/" target="_blank"><img src="/new2016/images/amoslee-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.amoslee.com/" target="_blank"><img src="../images/amoslee-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project6 -->
 
         <div class="project-half mix cat-1" data-my-order="7">
@@ -123,7 +123,7 @@
                     <a href="http://marianhillmusic.com/" target="_blank" class="project-link" data-hover="Marian Hill"><h4>Marian Hill</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://marianhillmusic.com/" target="_blank"><img src="/new2016/images/marianhill-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://marianhillmusic.com/" target="_blank"><img src="../images/marianhill-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project7 -->
 
         <div class="project-half mix cat-1" data-my-order="8">
@@ -131,7 +131,7 @@
                     <a href="http://www.cashmoney-records.com/" target="_blank" class="project-link" data-hover="Cash Money Records"><h4>Cash Money Records</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://www.cashmoney-records.com/" target="_blank"><img src="/new2016/images/cashmoney-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.cashmoney-records.com/" target="_blank"><img src="../images/cashmoney-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project8 -->
 
           <div class="project-half mix cat-1" data-my-order="9">
@@ -139,7 +139,7 @@
                     <a href="http://andrewwattmusic.com/" target="_blank" class="project-link" data-hover="Andrew Watt"><h4>Andrew Watt</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://andrewwattmusic.com/" target="_blank"><img src="/new2016/images/andrewwatt-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://andrewwattmusic.com/" target="_blank"><img src="../images/andrewwatt-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project9 -->
 
           <div class="project-half mix cat-1" data-my-order="10">
@@ -147,7 +147,7 @@
                     <a href="http://www.lifeofdesiigner.com/" target="_blank" class="project-link" data-hover="Desiigner"><h4>Desiigner</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://www.lifeofdesiigner.com/" target="_blank"><img src="/new2016/images/lifeofdesiigner-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.lifeofdesiigner.com/" target="_blank"><img src="../images/lifeofdesiigner-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project10 -->
 
         <div class="project-half mix cat-1 cat-2 cat-4" data-my-order="11">
@@ -155,7 +155,7 @@
                     <a href="http://eternalbody.care/" target="_blank" class="project-link" data-hover="Eternal Body"><h4>Eternal Body</h4></a>
                     <p>Branding, UX/UI, Development</p>
               </div>    
-               <a href="http://eternalbody.care/" target="_blank"><img src="/new2016/images/shiatsu-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://eternalbody.care/" target="_blank"><img src="../images/shiatsu-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project11 -->
 
         <div class="project-half mix cat-1" data-my-order="12">
@@ -164,7 +164,7 @@
                     <h4>Us The Duo</h4></a>
                     <p>UX/UI Design</p>
               </div>    
-               <a href="http://slowdowntime.ustheduo.com/" target="_blank"><img src="/new2016/images/ustheduo-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://slowdowntime.ustheduo.com/" target="_blank"><img src="../images/ustheduo-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project12 -->
 
         <div class="project-half mix cat-4" data-my-order="13">
@@ -173,7 +173,7 @@
                     <h4>Thorium</h4></a>
                     <p>Branding</p>
               </div>    
-               <a href="#" target="_blank"><img src="/new2016/images/thorium-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="#" target="_blank"><img src="../images/thorium-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project13 -->
 
         <div class="project-half mix cat-1 cat-2 cat-4" data-my-order="14">
@@ -181,7 +181,7 @@
                     <a href="http://www.thelatinkitchen.com/" target="_blank" class="project-link" data-hover="The Latin Kitchen"><h4>The Latin Kitchen</h4></a>
                     <p>Branding, Web Design</p>
               </div>    
-               <a href="http://www.thelatinkitchen.com/" target="_blank"><img src="/new2016/images/tlk-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.thelatinkitchen.com/" target="_blank"><img src="../images/tlk-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project14 -->
 
         <div class="project-half mix cat-1 cat-2" data-my-order="15">
@@ -189,7 +189,7 @@
                     <a href="http://www.latina.com/" target="_blank" class="project-link" data-hover="Latina"><h4>Latina</h4></a>
                     <p>Web Design</p>
               </div>    
-               <a href="http://www.latina.com/" target="_blank"><img src="/new2016/images/latina-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="http://www.latina.com/" target="_blank"><img src="../images/latina-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project15 -->
 
         <div class="project-half mix cat-2 cat-3" data-my-order="16">
@@ -197,7 +197,7 @@
                     <a href="https://itunes.apple.com/us/app/latina-extra/id523624773?mt=8" target="_blank" class="project-link" data-hover="Latina Extra App"><h4>Latina Extra App</h4></a>
                     <p>iOS App Design</p>
               </div>    
-               <a href="https://itunes.apple.com/us/app/latina-extra/id523624773?mt=8" target="_blank"><img src="/new2016/images/latinaextra-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
+               <a href="https://itunes.apple.com/us/app/latina-extra/id523624773?mt=8" target="_blank"><img src="../images/latinaextra-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
           </div><!-- project16 -->
 
         </div><!-- /.row-->
@@ -237,9 +237,9 @@
       </div><!-- /.container -->
       </footer>
 
-    <script src="/new2016/javascripts/jquery.js"></script>
-    <script src="/new2016/javascripts/jquery.easing.1.3.min.js"></script>
-    <script src="/new2016/javascripts/site.min.js" type="text/javascript"></script>
+    <script src="../javascripts/jquery.js"></script>
+    <script src="../javascripts/jquery.easing.1.3.min.js"></script>
+    <script src="../javascripts/site.min.js" type="text/javascript"></script>
     <script type="text/javascript">
     $(function(){
       $('#Container').mixItUp();
