small updates to 404 page

--- a/404.html
+++ b/404.html
@@ -21,6 +21,10 @@
       <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
   <body>
+  <div class="canvas-border-top"><div class="toprightcorner"></div></div>
+  <div class="canvas-border-left"><div class="topleftcorner"></div></div>
+  <div class="canvas-border-right"></div>
+  <div class="canvas-border-bottom"><div class="bottomleftcorner"></div></div>
     <header id="header">
       <div class="container">
         <a class="header-logo" href="/"><span class="hide-show left">Bianca Negron</span><span class="blue left">.</span></a>
@@ -51,7 +55,7 @@
       <div id="fourohfour">
         <div class="container">
         <h1 style="font-family: 'kepler-std-display',serif;">404</h1>
-        <h2 style="font-family: 'sofia-pro',sans-serif;line-height:1.1;">Looks like the page you’re looking for doesn’t exist.</h2>
+        <h2 style="font-family: 'sofia-pro',sans-serif;line-height:1.1;">These are not the droids you are looking for...or the page you’re looking for just does not exist...</h2>
         </div>
       </div>
 
