Image Updates / Adding portfolio items

--- a/projects/boom-fantasy/index.html
+++ b/projects/boom-fantasy/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang='en' id='top'>
+<html lang='en'  id='top'>
   <head>
     <meta charset='utf-8'>
     <meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'>
-      <title>Bianca Negron - Web Designer &amp; Developer</title>
+      <title>Bianca Negron - Web Designer &amp; Developer - About</title>
     <meta content='width=device-width, initial-scale=1.0, user-scalable=no' name='viewport'>
     <meta content='yes' name='apple-mobile-web-app-capable'>
     <meta content='Bianca Designs' property='og:title'>
@@ -14,9 +14,9 @@
     <meta content='114' property='og:image:width'>
     <meta content='114' property='og:image:height'>
     <meta content='design, bianca negron' name='keywords'>
-      <link rel='shortcut icon' href='favicon.ico'>
-      <script src="javascripts/lib/modernizr.js" type="text/javascript"></script>
-      <link href="stylesheets/style.css" media="screen" rel="stylesheet" type="text/css">
+      <link rel='shortcut icon' href='../../favicon.ico'>
+      <script src="../../javascripts/lib/modernizr.js" type="text/javascript"></script>
+      <link href="../../stylesheets/style.css" media="screen" rel="stylesheet" type="text/css">
       <script src="https://use.typekit.net/akc3smf.js"></script>
       <script>try{Typekit.load({ async: true });}catch(e){}</script>
   </head>
@@ -52,51 +52,20 @@
       </div>
     </header>
 
-      <div id="sub-header">
-
-		    <div class="type-wrap">
-              <div class="container">
-                <p><span id="typed"></span></p>
-            </div>
-        </div>
-
-      </div>
-
-    <!-- PROJECTS -->
-      <section id="portfolio-short">
+<section id="portfolio-short">
       <div class="container">
-      <div class="project-full">
-              <div class="project-overlay">
-                    <a href="http://phantogram.com" target="_blank" class="project-link" data-hover="Phantogram"><h4>Phantogram</h4></a>
-                    <p>UX/UI Design</p>
-              </div>
-             <a href="http://phantogram.com" target="_blank">
-             <img src="images/phantogram-full.jpg" class="img-responsive desktop-img" alt="Design by Bianca Negron"/>
-              <img src="images/phantogram-half.jpg" class="img-responsive mobile-img" alt="Design by Bianca Negron"/>
-             </a>
-        </div><!-- project1 -->
-        <div class="project-half">
-              <div class="project-overlay w-txt">
-                    <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
-                    <p>iOS Design, User Onboarding</p>
-              </div>    
-               <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
+                <div class="project-half">
+                    <div class="project-overlay w-txt">
+                          <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
+                          <p>iOS Design, User Onboarding</p>
+                    </div>    
+                     <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="../../images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
 
-          </div><!-- project2 -->
-          <div class="project-half">
-              <div class="project-overlay">
-                    <a href="http://islandrecords.com/" target="_blank" class="project-link" data-hover="Island Records"><h4>Island Records</h4></a>
-                    <p>UX/UI Design</p>
-              </div>    
-               <a href="http://islandrecords.com/" target="_blank"><img src="images/islandrecords-half.jpg" class="img-responsive" alt="Web Design/Development by Bianca Negron"/></a>
-
-          </div><!-- project3 -->
-      
-        <div class="jedi-bttn"><a href="work/">View All Work</a></div>
+                </div><!-- project -->
       </div>
-      </section>
+</section>
 
-    <!-- CONTACT SECTION -->
+<!-- CONTACT SECTION -->
     <section id="contact-me">
       <div class="email-me">
           <h3>Say Hello</h3>
@@ -117,47 +86,17 @@
     </section>
     <!-- END CONTACT SECTION -->
 
-    <!-- FOOTER -->
+      <!-- FOOTER -->
       <footer>
       <div class="container">
-        <p class="pull-right"><a href="#top"><i class="fa fa-angle-up"></i></a></p>
+        <p class="pull-right"><a href="#top"><i class="fa fa-angle-up"></i></a></a></p>
         <p>&copy; 2007-2016 Bianca Negron, LLC. Handcrafted with <i class="fa fa-heart"></i> in Queens, NY.</p>
       </div><!-- /.container -->
       </footer>
 
-
-    <script src="javascripts/jquery.js"></script>
-    <script src="javascripts/jquery.easing.1.3.min.js"></script>
-    <script src="javascripts/site.min.js" type="text/javascript"></script>
-    <script>
-
-    $(function(){
-        $("#typed").typed({
-            strings: ["Bianca Negron is a Designer <em>&</em> <br/> Developer living in New York City.", "Creating <em>&</em> building meaningful <br/> brands and digital experiences."],
-            typeSpeed: 30,
-            backDelay: 1200,
-            loop: false,
-            contentType: 'html', // or text
-            // defaults to false for infinite loop
-            loopCount: false,
-            callback: function(){ foo(); },
-            resetCallback: function() { newTyped(); }
-        });
-
-        $(".reset").click(function(){
-            $("#typed").typed('reset');
-        });
-
-    });
-
-    function newTyped(){ /* A new typed object */
-
-
-    }
-
-    function foo(){ console.log("Callback"); }
-
-    </script>
+    <script src="../../javascripts/jquery.js"></script>
+    <script src="../../javascripts/jquery.easing.1.3.min.js"></script>
+    <script src="../../javascripts/site.min.js" type="text/javascript"></script>
     <script>
       $(function() {
         $('a[href*=#]:not([href=#])').click(function() {
@@ -167,7 +106,7 @@
             if (target.length) {
               $('html,body').animate({
                 scrollTop: target.offset().top
-              }, 1200);
+              }, 1000);
               return false;
             }
           }
