--- a/work/index.html
+++ b/work/index.html
@@ -81,7 +81,7 @@
         <div class="project-half mix cat-3" data-my-order="2">
           <div class="project-overlay w-txt">
                     <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
-                    <p>iOS App Design</p>
+                    <p>iOS Design, User Onboarding</p>
               </div>    
                <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="../images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
         </div><!-- project2 -->
