--- a/projects/boom-fantasy/index.html
+++ b/projects/boom-fantasy/index.html
@@ -52,15 +52,12 @@
       </div>
     </header>
 
-<section id="portfolio-short">
+<section id="single-project">
+      <div class="featured-img"><h1>Boom Fantasy</h1><img src="images/boom-featured-img.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></div>
       <div class="container">
-                <div class="project-half">
-                    <div class="project-overlay w-txt">
-                          <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
-                          <p>iOS Design, User Onboarding</p>
-                    </div>    
-                     <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="../../images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
-
+                <div class="project-info">
+                  <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"></a>
+                  <p>iOS Design, User Onboarding</p>    
                 </div><!-- project -->
       </div>
 </section>
