Adding new image

--- a/projects/boom-fantasy/index.html
+++ b/projects/boom-fantasy/index.html
@@ -53,13 +53,21 @@
     </header>
 
 <section id="single-project">
-      <div class="featured-img"><h1>Boom Fantasy</h1><img src="images/boom-featured-img.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></div>
-      <div class="container">
-                <div class="project-info">
-                  <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"></a>
-                  <p>iOS Design, User Onboarding</p>    
-                </div><!-- project -->
-      </div>
+  <div class="container">
+  <div class="project-name"><h1>Boom Fantasy</h1><p>iOS Design, User Onboarding</p></div>
+    <div class="featured-img">
+      <img src="images/boom-featured-img.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/>
+    </div>
+      <div class="project-detail">
+        <p><span class="label">WEBSITE</span><a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"> Download the app</a></p>
+        <p><span class="label">STATUS</span> Work in progress</p>
+        <p><span class="label">ABOUT THE COMPANY</span> Boom Fantasy is a real-time platform where fans immerse themselves in live events by predicting what's going to happen next. </p>
+        <p><span class="label">TASKS</span>Redesign of the current iOS app screens, <br/>Created new user onboarding experience, <br/>Designed iPhone screenshot images for iOS App Store, <br/> Put together powerpoints and one sheet documents to present to potential partners  </p>
+        <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"></a>   
+      </div><!-- project -->
+      <img src="images/boom-project1.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/>
+      <img src="images/boom-project2.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/>
+  </div><!--container-->
 </section>
 
 <!-- CONTACT SECTION -->
@@ -79,7 +87,7 @@
             <a href="https://500px.com/biancanegron" class="500px-icon" target="_blank" alt="Bianca Negron on 500px"><i class="fa fa-500px"></i></a>
           </div>
         </div>
-
+    <div class="jedi-bttn left"><a href="#">Previous Project</a></div>
     </section>
     <!-- END CONTACT SECTION -->
 
