--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
+            <!--<li><a class="navigation-link" href="#" target="_blank">Shop</a></li>-->
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -44,7 +44,7 @@
           <ul>
             <li><a class="navigation-link" href="/work">Work</a></li>
             <li><a class="navigation-link" href="/about">About</a></li>
-            <li><a class="navigation-link" href="/resume/biancanegron-resume.pdf" target="_blank">Résumé</a></li>
+            <!--<li><a class="navigation-link" href="#" target="_blank">Shop</a></li>-->
             <li><a class="navigation-link" href="#contact-me">Contact</a></li>
           </ul>
         </nav>
@@ -54,7 +54,7 @@
 
       <div id="sub-header">
 
-		    <div class="type-wrap">
+        <div class="type-wrap">
               <div class="container">
                 <p><span id="typed"></span></p>
             </div>
@@ -66,21 +66,24 @@
       <section id="portfolio-short">
       <div class="container">
       <div class="project-full">
-              <div class="project-overlay">
-                    <a href="http://phantogram.com" target="_blank" class="project-link" data-hover="Phantogram"><h4>Phantogram</h4></a>
-                    <p>UX/UI Design</p>
+              <div class="project-overlay w-txt">
+                    <a href="http://biancanegron.com/shop/product/tech-heart/" target="_blank" class="project-link" data-hover="Tech Heart"><h4>Tech Heart</h4></a>
+                    <p>Product Design, Pin for Sale</p>
               </div>
-             <a href="http://phantogram.com" target="_blank">
-             <img src="images/phantogram-full.jpg" class="img-responsive desktop-img" alt="Design by Bianca Negron"/>
-              <img src="images/phantogram-half.jpg" class="img-responsive mobile-img" alt="Design by Bianca Negron"/>
+             <a href="http://biancanegron.com/shop/product/tech-heart/">
+             <img src="images/tech-heart-full.jpg" class="img-responsive desktop-img" alt="Design by Bianca Negron"/>
+              <img src="images/tech-heart-half.jpg" class="img-responsive mobile-img" alt="Design by Bianca Negron"/>
              </a>
         </div><!-- project1 -->
         <div class="project-half">
-              <div class="project-overlay w-txt">
-                    <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank" class="project-link"  data-hover="Boom Fantasy"><h4>Boom Fantasy</h4></a>
-                    <p>iOS Design, User Onboarding</p>
+              <div class="project-overlay">
+                    <a href="http://phantogram.com" class="project-link"  data-hover="Phantogram">
+                    <h4>Phantogram</h4></a>
+                    <p>UX/UI Design</p>
               </div>    
-               <a href="https://itunes.apple.com/us/app/boom-fantasy-real-time-fantasy/id1047007072?mt=8" target="_blank"><img src="images/boomfantasy-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/></a>
+               <a href="http://phantogram.com">
+               <img src="images/phantogram-half.jpg" class="img-responsive" alt="UX/UI Design by Bianca Negron"/>
+               </a>
 
           </div><!-- project2 -->
           <div class="project-half">
